--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ body {
   border-radius: 10px;
   cursor: pointer;
   background-color: #9aad9c;
-  color: white;
+  color: white
   padding-top: 15px;
   padding-bottom: 15px;
   padding-right: 20px;
